--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,8 +41,10 @@ jobs:
         git add -A
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
+        git config --global --add safe.directory "/github/workspace/public"
+        git config --global --add safe.directory "$GITHUB_WORKSPACE"
+        git config --global --add safe.directory "$GITHUB_WORKSPACE/public"
         git commit -m 'deploy'
-        git config --global --add safe.directory /github/workspace/public
 
     # force push the contents of the /public folder to the master branch
     - name: Force push to master
